--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       </div>
     </div>
     <div class="submit-info">
-      <p class="submit light-pink submit-info-header">Письмо отправлено</p>
+      <p class="submit submit-info-header">Письмо отправлено</p>
       <p class="submit submit-info-thema">Без темы</p>
       <p class="submit submit-info-description">Без описания</p>
       <input class="submit-button" type="button" value="Ok" onclick="ConfirmSubmitOk()">
