feat: add set color of active menu item

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
     </div>
     <nav class="portfolio-navigation-cotainer">
       <ul class="portfolio-navigation">
-        <li class="menu-item" id="all-menu">all</li>
-        <li class="menu-item" id="web-design-menu">web-design</li>
-        <li class="menu-item" id="graphic-design-menu">graphic-design</li>
-        <li class="menu-item" id="artwork-menu">artwork</li>
+        <li class="menu-item" id="all-menu" onclick="AllActive()">all</li>
+        <li class="menu-item" id="web-design-menu" onclick="WebDesignActive()">web-design</li>
+        <li class="menu-item" id="graphic-design-menu" onclick="GraphicActive()">graphic-design</li>
+        <li class="menu-item" id="artwork-menu" onclick="ArtworkActive()">artwork</li>
       </ul>
     </nav>
   </section>
