--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
           </div>
           <div class="screen screen-vertical">
-            <img class="backgroundVertical" src="./assets/image/screen1.png" width="auto" height="auto"
+            <img class="backgroundVertical" src="./assets/image/slide1/screen1.png" width="auto" height="auto"
               alt="Background">
           </div>
         </div>
@@ -61,13 +61,22 @@
             <img class="base horizontal" src="./assets/image/phone.png" width="215" height="458" alt="Phone horizontal">
           </div>
           <div class="screen screen-horizontal">
-            <img class="backgroundHorizontal" src="./assets/image/screen2.png" width="auto" height="auto"
+            <img class="backgroundHorizontal" src="./assets/image/slide1/screen2.png" width="auto" height="auto"
               alt="Background">
           </div>
         </div>
       </div>
       <div class="slider-wrapper" id="slide2">
-        <p>Slide2</p>
+        <div class="phone phone-vertical">
+          <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
+          <div class="base-container">
+            <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
+          </div>
+          <div class="screen screen-vertical">
+            <img class="backgroundVertical" src="./assets/image/slide2/screen1.png" width="auto" height="auto"
+              alt="Background">
+          </div>
+        </div>        
       </div>
     </div>
   </section>
