feat: add two small phones to slide2

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
       <img src="./assets/image/arrow-right.svg" width="16" height="27" alt="Right">
     </div>
     <div class="slider-list">
+
       <div class="slider-wrapper" id="slide1">
-        <div class="phone phone-vertical">
+        <div class="phone" id="phone-vertical-slide1">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
           <div class="base-container">
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
@@ -55,7 +56,7 @@
               alt="Background">
           </div>
         </div>
-        <div class="phone phone-horizontal rotate-90-degree">
+        <div class="phone rotate-90-degree" id="phone-horizontal-slide1">
           <img class="shadow rotateY-180-degree" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
           <div class="base-container">
             <img class="base horizontal" src="./assets/image/phone.png" width="215" height="458" alt="Phone horizontal">
@@ -66,8 +67,10 @@
           </div>
         </div>
       </div>
+
       <div class="slider-wrapper" id="slide2">
-        <div class="phone phone-vertical">
+
+        <div class="phone small">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
           <div class="base-container">
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
@@ -76,7 +79,30 @@
             <img class="backgroundVertical" src="./assets/image/slide2/screen1.png" width="auto" height="auto"
               alt="Background">
           </div>
-        </div>        
+        </div> 
+
+        <div class="phone">
+          <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
+          <div class="base-container">
+            <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
+          </div>
+          <div class="screen screen-vertical">
+            <img class="backgroundVertical" src="./assets/image/slide2/screen1.png" width="auto" height="auto"
+              alt="Background">
+          </div>
+        </div> 
+        
+        <div class="phone small">
+          <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
+          <div class="base-container">
+            <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
+          </div>
+          <div class="screen screen-vertical">
+            <img class="backgroundVertical" src="./assets/image/slide2/screen1.png" width="auto" height="auto"
+              alt="Background">
+          </div>
+        </div> 
+
       </div>
     </div>
   </section>
