feat: adjust sliders changing

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <div class="slider-wrapper" id="slide2">
 
-        <div class="phone small">
+        <div class="phone small" id="phone-small-left">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
           <div class="base-container">
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
@@ -92,7 +92,7 @@
           </div>
         </div> 
         
-        <div class="phone small">
+        <div class="phone small" id="phone-small-right">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
           <div class="base-container">
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
