--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </div>
     <div class="slider-list">
 
+      <!-- Slide1 -->
       <div class="slider-wrapper" id="slide1">
         <div class="phone" id="phone-vertical-slide1">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
@@ -68,26 +69,26 @@
         </div>
       </div>
 
+      <!-- Slide2 -->
       <div class="slider-wrapper" id="slide2">
-
         <div class="phone small" id="phone-small-left">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
           <div class="base-container">
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
           </div>
           <div class="screen screen-vertical">
-            <img class="backgroundVertical" src="./assets/image/slide2/screen1.png" width="auto" height="auto"
+            <img class="backgroundVertical" src="./assets/image/slide2/screen2.png" width="189" height="334"
               alt="Background">
           </div>
         </div> 
 
-        <div class="phone">
+        <div class="phone" id="phone-central">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
           <div class="base-container">
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
           </div>
           <div class="screen screen-vertical">
-            <img class="backgroundVertical" src="./assets/image/slide2/screen1.png" width="auto" height="auto"
+            <img class="backgroundVertical background-small" src="./assets/image/slide2/screen1.png" width="188" height="332"
               alt="Background">
           </div>
         </div> 
@@ -98,7 +99,7 @@
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
           </div>
           <div class="screen screen-vertical">
-            <img class="backgroundVertical" src="./assets/image/slide2/screen1.png" width="auto" height="auto"
+            <img class="backgroundVertical background-small" src="./assets/image/slide2/screen2.png" width="189" height="334"
               alt="Background">
           </div>
         </div> 
