fix: change menu active function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <ul class="header-navigation">
           <li class="navigation-menu home" id="nav-home">
-            <a class="nav-main" href="#header">home</a>
+            <a class="nav-main active" href="#slider">home</a>
           </li>
           <li class="navigation-menu" id="nav-services">
             <a class="nav-main" href="#services">services</a>
@@ -36,7 +36,7 @@
     </div>
   </header>
 
-  <section class="slider">
+  <section class="slider scroll" id="slider">
     <div class="arrow arrow-left">
       <img src="./assets/image/arrow-left.svg" width="16" height="27" alt="Left">
     </div>
@@ -108,7 +108,7 @@
     </div>
   </section>
 
-  <section class="services" id="services">
+  <section class="services  scroll" id="services">
     <div class="service-information">
       <h2 class="gray" id="service-header">our services</h2>
       <p class="light-gray" id="service-content">
@@ -183,7 +183,7 @@
     </div>
   </section>
 
-  <section class="portfolio" id="portfolio">
+  <section class="portfolio scroll" id="portfolio">
     <div class="portfolio-header">
       <h1 class="portfolio-name">portfolio</h1>
       <p class="portfolio-header-text">
@@ -242,7 +242,7 @@
     </div>
   </section>
 
-  <section class="about-us" id="about">
+  <section class="about-us scroll" id="about">
     <div class="about-us-content">
       <h2>about us</h2>
       <p>
@@ -341,7 +341,7 @@
     </div>
   </section>
 
-  <section class="quote-header">
+  <section class="quote-header scroll">
     <div class="quote-container">
       <h1 class="light-pink">Get a Quote</h1>
       <p class="light-pink">
