fix: adjust the correct menu navigation

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
   </section>
 
-  <section class="services  scroll" id="services">
+  <section class="services scroll" id="services">
     <div class="service-information">
       <h2 class="gray" id="service-header">our services</h2>
       <p class="light-gray" id="service-content">
@@ -341,7 +341,7 @@
     </div>
   </section>
 
-  <section class="quote-header scroll">
+  <section class="quote-header scroll"  id="quote-contact">
     <div class="quote-container">
       <h1 class="light-pink">Get a Quote</h1>
       <p class="light-pink">
@@ -353,7 +353,7 @@
     </div>
   </section>
 
-  <section class="quote-main" id="quote-contact">
+  <section class="quote-main">
     <div class="quote-main-container">
       <form class="form" action="#" method="POST">
         <input class="input-form" type="text" name="name" id="name" placeholder="Name (Required)" minlength="3"
