refactor: change portfolio and quote section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img class="backgroundVertical" src="./assets/image/slide2/screen2.png" width="189" height="334"
               alt="Background">
           </div>
-        </div> 
+        </div>
 
         <div class="phone" id="phone-central">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
@@ -88,21 +88,21 @@
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
           </div>
           <div class="screen screen-vertical">
-            <img class="backgroundVertical background-small" src="./assets/image/slide2/screen1.png" width="188" height="332"
-              alt="Background">
+            <img class="backgroundVertical background-small" src="./assets/image/slide2/screen1.png" width="188"
+              height="332" alt="Background">
           </div>
-        </div> 
-        
+        </div>
+
         <div class="phone small" id="phone-small-right">
           <img class="shadow" src="./assets/image/shadow.png" width="240" height="483" alt="Shadow">
           <div class="base-container">
             <img class="base" src="./assets/image/phone.png" width="215" height="458" alt="Phone vertical">
           </div>
           <div class="screen screen-vertical">
-            <img class="backgroundVertical background-small" src="./assets/image/slide2/screen2.png" width="189" height="334"
-              alt="Background">
+            <img class="backgroundVertical background-small" src="./assets/image/slide2/screen2.png" width="189"
+              height="334" alt="Background">
           </div>
-        </div> 
+        </div>
 
       </div>
     </div>
@@ -183,6 +183,7 @@
     </div>
   </section>
 
+  <!-- Portfolio -->
   <section class="portfolio scroll" id="portfolio">
     <div class="portfolio-header">
       <h1 class="portfolio-name">portfolio</h1>
@@ -199,49 +200,49 @@
         <li class="menu-item" id="artwork-menu" onclick="artworkActive()">artwork</li>
       </ul>
     </nav>
-  </section>
-
-  <section class="gallery">
-    <div class="layout-4-columns">
-      <div class="gallery-image">
-        <img id="image01" src="./assets/image/portfolio/gallery/1.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image02" src="./assets/image/portfolio/gallery/2.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image03" src="./assets/image/portfolio/gallery/3.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image04" src="./assets/image/portfolio/gallery/4.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image05" src="./assets/image/portfolio/gallery/5.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image06" src="./assets/image/portfolio/gallery/6.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image07" src="./assets/image/portfolio/gallery/7.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image08" src="./assets/image/portfolio/gallery/8.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image09" src="./assets/image/portfolio/gallery/9.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image10" src="./assets/image/portfolio/gallery/10.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image11" src="./assets/image/portfolio/gallery/11.png" width="auto" height="auto" alt="Image">
-      </div>
-      <div class="gallery-image">
-        <img id="image12" src="./assets/image/portfolio/gallery/12.png" width="auto" height="auto" alt="Image">
+    <div class="gallery">
+      <div class="layout-4-columns">
+        <div class="gallery-image">
+          <img id="image01" src="./assets/image/portfolio/gallery/1.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image02" src="./assets/image/portfolio/gallery/2.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image03" src="./assets/image/portfolio/gallery/3.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image04" src="./assets/image/portfolio/gallery/4.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image05" src="./assets/image/portfolio/gallery/5.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image06" src="./assets/image/portfolio/gallery/6.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image07" src="./assets/image/portfolio/gallery/7.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image08" src="./assets/image/portfolio/gallery/8.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image09" src="./assets/image/portfolio/gallery/9.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image10" src="./assets/image/portfolio/gallery/10.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image11" src="./assets/image/portfolio/gallery/11.png" width="auto" height="auto" alt="Image">
+        </div>
+        <div class="gallery-image">
+          <img id="image12" src="./assets/image/portfolio/gallery/12.png" width="auto" height="auto" alt="Image">
+        </div>
       </div>
     </div>
   </section>
 
+  <!-- About -->
   <section class="about-us scroll" id="about">
     <div class="about-us-content">
       <h2>about us</h2>
@@ -341,7 +342,8 @@
     </div>
   </section>
 
-  <section class="quote-header scroll"  id="quote-contact">
+  <!-- Quite -->
+  <section class="quote scroll" id="quote-contact">
     <div class="quote-container">
       <h1 class="light-pink">Get a Quote</h1>
       <p class="light-pink">
@@ -351,9 +353,6 @@
         commodo, tortor mauris condimentum nibh.
       </p>
     </div>
-  </section>
-
-  <section class="quote-main">
     <div class="quote-main-container">
       <form class="form" action="#" method="POST">
         <input class="input-form" type="text" name="name" id="name" placeholder="Name (Required)" minlength="3"
@@ -402,6 +401,7 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <p class="copyright color-blue">&copy; Copyright 2013</p>
     <div class="footer-icons color-blue">
