feat: add mobile-navigation

--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
 <body>
 
   <header class="header" id="header">
-    <div class="header-container">
-      <h1 class="header-logo">Singolo<span class="red">*</span></h1>
-      <nav>
-        <ul class="header-navigation">
-          <li class="navigation-menu home" id="nav-home">
-            <a class="nav-main active" href="#slider">home</a>
-          </li>
-          <li class="navigation-menu" id="nav-services">
-            <a class="nav-main" href="#services">services</a>
-          </li>
-          <li class="navigation-menu" id="nav-portfolio">
-            <a class="nav-main" href="#portfolio">portfolio</a>
-          </li>
-          <li class="navigation-menu" id="nav-about">
-            <a class="nav-main" href="#about">about</a>
-          </li>
-          <li class="navigation-menu" id="nav-contact">
-            <a class="nav-main" href="#quote-contact">contact</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+      <div class="header-container">
+          <div id="burger-menu"></div>
+          <h1 class="header-logo">Singolo<span class="red">*</span></h1>
+          <nav id="navigation">
+              <ul class="header-navigation">
+                  <li class="navigation-menu home" id="nav-home">
+                      <a class="nav-main active" href="#slider">home</a>
+                  </li>
+                  <li class="navigation-menu" id="nav-services">
+                      <a class="nav-main" href="#services">services</a>
+                  </li>
+                  <li class="navigation-menu" id="nav-portfolio">
+                      <a class="nav-main" href="#portfolio">portfolio</a>
+                  </li>
+                  <li class="navigation-menu" id="nav-about">
+                      <a class="nav-main" href="#about">about</a>
+                  </li>
+                  <li class="navigation-menu" id="nav-contact">
+                      <a class="nav-main" href="#quote-contact">contact</a>
+                  </li>
+              </ul>
+          </nav>
+      </div>
   </header>
 
   <section class="slider scroll" id="slider">
