feat: implement menu movement

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header-container">
           <div id="burger-menu"></div>
           <h1 class="header-logo">Singolo<span class="red">*</span></h1>
-          <nav id="navigation">
+          <nav class="navigation">
               <ul class="header-navigation">
                   <li class="navigation-menu home" id="nav-home">
                       <a class="nav-main active" href="#slider">home</a>
